--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -19,9 +19,9 @@
       <div class="card-content card-bar-green">
         <h4>{{ project.title }}</h4>
         <p class="card-last">{{ project.description }}</p>
-        <p><a href="{{ project.url }}" alt="{{ project.text }}">{{ project.text }} <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon leader-2"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
+        <p><a href="{{ project.url }}" alt="{{ project.text }}">{{ project.text }}<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon leader-2"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
         <footer>
-          <span class="font-size--2 text-green"><em>{{ project.language }}</em></span><span class="icon-star right padding-left-1 text-dark-gray font-size--2"><em>178</em></span>
+          <span class="font-size--2 text-green"><em>{{ project.language }}</em></span><span class="icon-star right padding-left-1 text-dark-gray font-size--2"><em>{{ project.stars }}</em></span>
         </footer>
       </div>
     </div>
