ditch search and use hotlinks

--- a/src/layouts/_layout.html
+++ b/src/layouts/_layout.html
@@ -121,7 +121,7 @@
       </nav>
     </div>
     <div class="wrapper">
-      <header class="top-nav fade-in">
+      <!--header class="top-nav fade-in">
         <a class="skip-to-content" href="#skip-to-content">Skip To Content</a>
         <div class="grid-container">
           <div class="column-24">
@@ -136,7 +136,7 @@
             </nav>
           </div>
         </div>
-      </header>
+      </header-->
       <div id="skip-to-content">
         {% block main %}{% endblock %}
       </div>
