static Learn more and fixed footer

--- a/src/layouts/_layout.html
+++ b/src/layouts/_layout.html
@@ -179,8 +179,8 @@
           <section class="footer-social-nav leader-1">
             <a class="icon-social-twitter" aria-label="Esri on Twitter" href="https://twitter.com/Esri/"></a>
             <a class="icon-social-facebook" aria-label="Esri on Facebook" href="https://www.facebook.com/esrigis/"></a>
-            <a class="icon-social-github" aria-label="Esri on GitHub" href="http://esri.github.com/"></a>
-            <a class="icon-social-contact" aria-label="Contact Esri" href="http://www.esri.com/about-esri/contact/"></a>
+            <a class="icon-social-github" aria-label="Esri on GitHub" href="https://github.com/Esri/"></a>
+            <a class="icon-social-contact" aria-label="Contact Esri" href="https://www.esri.com/about-esri/contact/"></a>
           </section>
         </nav>
         <div class="column-24 leader-1">
