--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -1,6 +1,6 @@
 {% macro projectsSection(projectInfo) %}
 <div class="padding-leader-1">
-  <h1 class="" id="{{ projectInfo.anchor }}">{{ projectInfo.title }}</h1>
+  <h1 class="subdued-links" id="{{ projectInfo.anchor }}">{{ projectInfo.title }}</h1>
   {% set project = projectInfo.projects[0] %}
   <div class="grid-container panel panel-gray">
     <div class="column-8">
