--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -2,11 +2,11 @@
 <div class="padding-leader-1">
   <h1 class="subdued-links" id="{{ projectInfo.anchor }}">{{ projectInfo.title }}</h1>
   {% set project = projectInfo.projects[0] %}
-  <div class="grid-container panel panel-gray">
-    <div class="column-8">
+  <div class="grid-container panel panel-gray padding-right-1">
+    <div class="column-8 tablet-column-12 phone-column-6 padding-right-2">
       <img src="{{ project.image }}" />
     </div>
-    <div class="column-12">
+    <div class="column-12 tablet-column-12 phone-column-5 padding-right-2 leader-1">
       <h4>{{ project.title }}</h4>
       <p>{{ project.description }}</p>
     </div>
@@ -30,4 +30,10 @@
   </div>
   <p class="text-right leader-1"><a href="{{ projectInfo.url }}" alt="{{ projectInfo.text }}">{{ projectInfo.text }} <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
 </div>
+{% endmacro %}
+{% macro languageOptions(languageList) %}
+  {% for language in languageList %}<option data-filter="{{ language.tag }}">{{ language.label }}</option>{% endfor %}
+{% endmacro %}
+{% macro topicOptions(topicList) %}
+  {% for topic in topicList %}<option data-filter="{{ topic.tag }}">{{ topic.tag }}</option>{% endfor %}
 {% endmacro %}
