--- a/src/layouts/_layout.html
+++ b/src/layouts/_layout.html
@@ -167,6 +167,10 @@
       <script src="http://localhost:8080/webpack-dev-server.js"></script>
     {% endif %}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+    <script src="/assets/js/libs/chosen.jquery.js" type="text/javascript"></script>
+    <script src="/assets/js/github.js" type="text/javascript"></script>
+
     <script src="/assets/js/config.js"></script>
 
     <script src="{{ assetPath }}/index.js"></script>
