no need to use yaml for static text

--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -6,7 +6,7 @@
       <h1 class="subdued-links">{{ projectInfo.title }}</h1>
     </div>
     <div class="column-12">
-      <p class="text-right leader-1"><a href="{{ projectInfo.url }}" alt="{{ projectInfo.text }}">{{ projectInfo.text }} <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
+      <p class="text-right leader-1"><a href="{{ projectInfo.url }}" alt="View All">View All <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
     </div>
   </div>
   <div class="column-24 card padding-left-1 padding-right-1 padding-leader-1 padding-trailer-1">
