more responsive casestudies

--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -3,10 +3,10 @@
   <h1 class="subdued-links" id="{{ projectInfo.anchor }}">{{ projectInfo.title }}</h1>
   {% set project = projectInfo.projects[0] %}
   <div class="grid-container panel panel-gray">
-    <div class="column-8">
+    <div class="column-8 tablet-column-4 phone-column-5">
       <img src="{{ project.image }}" />
     </div>
-    <div class="column-12">
+    <div class="column-12 tablet-column-6 phone-column-5">
       <h4>{{ project.title }}</h4>
       <p>{{ project.description }}</p>
     </div>
