--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -11,10 +11,10 @@
   <div class="column-24 padding-left-1 padding-right-1 padding-leader-1 padding-trailer-1">
     {% set project = projectInfo.projects[0] %}
     <div class="panel panel-gray">
-      <div class="column-8">
+      <div class="column-8 tablet-column-4 phone-column-5">
         <img src="{{ project.image }}" />
       </div>
-      <div class="column-12">
+      <div class="column-12 tablet-column-6 phone-column-5">
         <h4>{{ project.title }}</h4>
         <p>{{ project.description }}</p>
       </div>
