--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -46,6 +46,12 @@
   min-width: 180px;
   min-height: 77px;
 }
+.line-height-less {
+  line-height: .75rem;
+}
+.hidden {
+  visibility: hidden;
+}
 @media screen and (max-width: 959px) {
   .chzn-container {
     margin-bottom: 15px;
@@ -904,7 +910,7 @@ body {
   width: auto;
 }
 .chzn-container-multi .chzn-choices .search-field .default {
-  color: #cccccc;
+  color: #9e9e9e;
   font-style: italic;
   font-family: "Lucida Grande",  "Seoge UI",  "Arial",  sans-serif;
 }
@@ -987,7 +993,6 @@ body {
     width: 100% !important;
   }
 }.chzn-container .chzn-results li {
-   display: none;
    line-height: 15px;
    padding: 15px 12px;
    margin: 0;
