Re-align projects section

--- a/src/layouts/_macros.html
+++ b/src/layouts/_macros.html
@@ -1,5 +1,5 @@
 {% macro projectsSection(projectInfo) %}
-<div class="column-24 padding-leader-0 padding-trailer-2">
+<div class="column-24 padding-leader-0 padding-trailer-1">
   <div class="column-24">
     <div class="column-12 tablet-column-8 phone-column-4">
       <h1 class="subdued-links" id="{{ projectInfo.anchor }}">{{ projectInfo.title }}</h1>
@@ -8,7 +8,7 @@
       <p class="text-right leader-1"><a href="{{ projectInfo.url }}" alt="View All">View All <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a></p>
     </div>
   </div>
-  <div class="column-24 padding-left-1 padding-right-1 padding-leader-1 padding-trailer-1">
+  <div class="column-24 padding-right-0 padding-leader-0 padding-trailer-1">
     {% set project = projectInfo.projects[0] %}
     <div class="panel panel-gray">
       <div class="column-8">
