best hero image so far

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,5 +1,5 @@
 .open-banner {
-  background: url("../img/open-source-hero-2.png") center center no-repeat #212121;
+  background: url("../img/open-source-hero.jpg") center center no-repeat #212121;
   background-size: cover;
   -webkit-transition: .5s -webkit-filter linear;
   -moz-transition: .5s -moz-filter linear;
