--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -52,11 +52,6 @@
 .hidden {
   visibility: hidden;
 }
-@media screen and (max-width: 959px) {
-  .chzn-container {
-    margin-bottom: 15px;
-  }
-}
 body {
   margin: 0;
 }
@@ -253,7 +248,14 @@ body {
     float: left;
     padding: 0 0.5em;
     width: 100%}
-}.repo {
+}
+.chosen-container {
+  margin: 0.4rem 0;
+}
+.chosen-choices {
+  font-size: 16pt;
+}
+.repo {
    height: auto;
    min-height: 10em;
    padding: 12px;
@@ -806,339 +808,6 @@ body {
   -webkit-transition-property: -webkit-transform,  opacity;
   -moz-transition-property: -moz-transform,  opacity;
   transition-property: transform,  opacity;
-}
-.chzn-container {
-  font-size: 16px;
-  line-height: 32px;
-  position: relative;
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-  /*float: right;*/
-  /*margin-bottom: 1.5em;*/
-  width: 100% !important;
-}
-@media screen and (max-width: 1024px) {
-  .chzn-container {
-    width: 100% !important;
-    float: left;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-container {
-    width: 100% !important;
-    float: left;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-container {
-    width: 100% !important;
-    float: left;
-  }
-}.chzn-container .chzn-drop {
-   background: #fff;
-   border: 1px solid #aaa;
-   border-top: 0;
-   position: absolute;
-   top: 29px;
-   left: 0;
-   -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-   -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-   z-index: 1010;
-   margin-top: -3px;
- }
-.chzn-drop {
-  width: 100% !important;
-  padding-top: 4px;
-}
-@media screen and (max-width: 1024px) {
-  .chzn-drop {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-drop {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-drop {
-    width: 100% !important;
-  }
-}.chzn-container-multi .chzn-choices {
-   background-color: #fff;
-   border: 1px solid #ddd;
-   margin: 0;
-   padding: 0;
-   cursor: text;
-   overflow: hidden;
-   height: auto !important;
-   position: relative;
-   width: 100% !important;
- }
-@media screen and (max-width: 1024px) {
-  .chzn-container-multi .chzn-choices {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-container-multi .chzn-choices {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-container-multi .chzn-choices {
-    width: 100% !important;
-  }
-}.chzn-container-multi .chzn-choices li {
-   float: left;
-   list-style: none;
- }
-.chzn-container-multi .chzn-choices .search-field {
-  white-space: nowrap;
-  margin: 0;
-  padding: 8px;
-}
-.chzn-container-multi .chzn-choices .search-field input {
-  color: #666;
-  background: white !important;
-  border: 0 !important;
-  font-family: sans-serif;
-  font-size: 100%;
-  height: 19px;
-  //padding: 10px 12px;
-  margin: 1px 0;
-  outline: 0;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  width: auto;
-}
-.chzn-container-multi .chzn-choices .search-field .default {
-  color: #9e9e9e;
-  font-style: italic;
-  font-family: "Lucida Grande",  "Seoge UI",  "Arial",  sans-serif;
-}
-.chzn-container-multi .chzn-choices .search-choice {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  background-color: #efefef;
-  color: #4d4d4d;
-  border: 1px solid #ddd;
-  /*line-height: 13px;*/
-  padding: 3px 28px 1px 10px;
-  list-style-type: none !important;
-  background-image: none;
-  margin: 3px 5px;
-  position: relative;
-  cursor: default;
-}
-.chzn-container-multi .chzn-choices .search-choice-focus {
-  background: #d4d4d4;
-  border: 1px solid #ccc;
-  color: #4d4d4d !important;
-}
-.chzn-container-multi .chzn-choices .search-choice .search-choice-close {
-  display: block;
-  position: absolute;
-  right: 8px;
-  top: 11px;
-  width: 12px;
-  height: 11px;
-  font-size: 1px;
-  background: url("../img/chosen-sprite.png") -43px 1px no-repeat;
-}
-.chzn-container-multi .chzn-choices .search-choice .search-choice-close:hover {
-  background-position: -43px -10px;
-}
-.chzn-container-multi .chzn-choices .search-choice-focus .search-choice-close {
-  background-position: -43px -10px;
-}
-.chzn-container .chzn-results {
-  margin: 0 4px 4px 0;
-  max-height: 240px;
-  padding: 0 0 0 4px;
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  width: 100% !important;
-}
-@media screen and (max-width: 1024px) {
-  .chzn-container .chzn-results {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-container .chzn-results {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-container .chzn-results {
-    width: 100% !important;
-  }
-}.chzn-container-multi .chzn-results {
-   margin: -1px 0 0;
-   padding: 0;
-   width: 100% !important;
- }
-@media screen and (max-width: 1024px) {
-  .chzn-container-multi .chzn-results {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-container-multi .chzn-results {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-container-multi .chzn-results {
-    width: 100% !important;
-  }
-}.chzn-container .chzn-results li {
-   line-height: 15px;
-   padding: 15px 12px;
-   margin: 0;
-   list-style: none;
-   list-style-type: none;
-   background-image: none;
-   width: 100% !important;
-   color: #333;
- }
-@media screen and (max-width: 1024px) {
-  .chzn-container .chzn-results li {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 768px) {
-  .chzn-container .chzn-results li {
-    width: 100% !important;
-  }
-}@media screen and (max-width: 480px) {
-  .chzn-container .chzn-results li {
-    width: 100% !important;
-  }
-}.chzn-container .chzn-results .active-result {
-   cursor: pointer;
-   display: list-item;
-   list-style-type: none;
- }
-.chzn-container .chzn-results .highlighted {
-  background-color: #eeeeee;
-  color: #4d4d4d;
-}
-.chzn-container .chzn-results li em {
-  background: #feffde;
-  font-style: normal;
-}
-.chzn-container .chzn-results .highlighted em {
-  background: transparent;
-}
-.chzn-container .chzn-results .no-results {
-  background: #f4f4f4;
-  display: list-item;
-}
-.chzn-container .chzn-results .group-result {
-  cursor: default;
-  color: #999;
-  font-weight: bold;
-}
-.chzn-container-multi .chzn-drop .result-selected {
-  display: none;
-}
-.chzn-container .chzn-results-scroll {
-  background: white;
-  margin: 0 4px;
-  position: absolute;
-  text-align: center;
-  width: 321px;
-  z-index: 1;
-}
-.chzn-container .chzn-results-scroll span {
-  display: inline-block;
-  height: 17px;
-  text-indent: -5000px;
-  width: 9px;
-}
-.chzn-container .chzn-results-scroll-down {
-  bottom: 0;
-}
-.chzn-container .chzn-results-scroll-down span {
-  background: url("../img/chosen-sprite.png") no-repeat -4px -3px;
-}
-.chzn-container .chzn-results-scroll-up span {
-  background: url("../img/chosen-sprite.png") no-repeat -22px -3px;
-}
-.chzn-container-active .chzn-choices {
-  -webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
-  border: 1px solid #aaa;
-}
-.chzn-container-active .chzn-choices .search-field input {
-  color: #111 !important;
-}
-.chzn-disabled {
-  cursor: default;
-  opacity: 0.5 !important;
-}
-.chzn-disabled .chzn-single {
-  cursor: default;
-}
-.chzn-disabled .chzn-choices .search-choice .search-choice-close {
-  cursor: default;
-}
-.chzn-rtl {
-  text-align: right;
-}
-.chzn-rtl .chzn-single {
-  padding: 0 8px 0 0;
-  overflow: visible;
-}
-.chzn-rtl .chzn-single span {
-  margin-left: 26px;
-  margin-right: 0;
-  direction: rtl;
-}
-.chzn-rtl .chzn-single div {
-  left: 3px;
-  right: auto;
-}
-.chzn-rtl .chzn-single abbr {
-  left: 26px;
-  right: auto;
-}
-.chzn-rtl .chzn-choices .search-field input {
-  direction: rtl;
-}
-.chzn-rtl .chzn-choices li {
-  float: right;
-}
-.chzn-rtl .chzn-choices .search-choice {
-  padding: 3px 5px 3px 19px;
-  margin: 3px 5px 3px 0;
-}
-.chzn-rtl .chzn-choices .search-choice .search-choice-close {
-  left: 4px;
-  right: auto;
-  background-position: right top;
-}
-.chzn-rtl.chzn-container-single .chzn-results {
-  margin: 0 0 4px 4px;
-  padding: 0 4px 0 0;
-}
-.chzn-rtl .chzn-results .group-option {
-  padding-left: 0;
-  padding-right: 15px;
-}
-.chzn-rtl.chzn-container-active .chzn-single-with-drop div {
-  border-right: none;
-}
-.chzn-rtl .chzn-search input {
-  background: #fff url("../img/chosen-sprite.png") no-repeat -38px -22px;
-  background: url("../img/chosen-sprite.png") no-repeat -38px -22px, -webkit-gradient(linear,  0 0,  0 100%,  color-stop(1%,  #eee),  color-stop(15%,  #fff));
-  background: url("../img/chosen-sprite.png") no-repeat -38px -22px, -webkit-linear-gradient(top,  #eee 1%,  #fff 15%);
-  background: url("../img/chosen-sprite.png") no-repeat -38px -22px, -moz-linear-gradient(top,  #eee 1%,  #fff 15%);
-  background: url("../img/chosen-sprite.png") no-repeat -38px -22px, -o-linear-gradient(top,  #eee 1%,  #fff 15%);
-  background: url("../img/chosen-sprite.png") no-repeat -38px -22px, linear-gradient(#eeeeee 1%, #ffffff 15%);
-  padding: 4px 5px 4px 20px;
-  direction: rtl;
 }
 .no-results span {
   display: none;
