--- a/src/layouts/_layout.html
+++ b/src/layouts/_layout.html
@@ -168,7 +168,7 @@
     {% endif %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-    <script src="/assets/js/libs/chosen.jquery.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.7.0/chosen.jquery.min.js" type="text/javascript"></script>
     <script src="/assets/js/github.js" type="text/javascript"></script>
 
     <script src="/assets/js/config.js"></script>
