--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -261,7 +261,7 @@ body {
   padding: 3px 28px 1px 10px;
 }
 
-.chosen-container-multi .chosen-choices, 
+.chosen-container-multi .chosen-choices,
 .chosen-container-multi .chosen-choices li.search-choice {
   border-color: #ddd;
   background-image: none;
@@ -283,6 +283,12 @@ body {
 
 .chosen-container .chosen-results li.group-result {
   color: #999;
+}
+
+.chosen-container .chosen-results li.highlighted {
+  color: #111;
+  background-color: #eee;
+  background-image: none;
 }
 
 .repo {
