Border color matching

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -310,6 +310,12 @@ body {
   background-image: none;
 }
 
+.chosen-container .chosen-drop {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
 .repo {
    height: auto;
    min-height: 10em;
