--- a/src/layouts/_layout.html
+++ b/src/layouts/_layout.html
@@ -84,7 +84,7 @@
     {% endfor -%}
 
     <!-- PingBack / Favicon -->
-    <link rel="pingback" href="http://pingback.me/esri/xmlrpc" />
+    <link rel="pingback" href="https://pingback.me/esri/xmlrpc" />
     <link rel="shortcut icon" href="/favicon.ico">
 
     <!-- CSS  -->
@@ -148,7 +148,7 @@
           </ul>
         </nav>
         <nav class="column-6">
-          <a class="esri-logo" href="http://esri.com" aria-label="Esri Home"></a>
+          <a class="esri-logo" href="https://esri.com" aria-label="Esri Home"></a>
           <section class="footer-social-nav leader-1">
             <a class="icon-social-twitter" aria-label="Esri on Twitter" href="https://twitter.com/Esri/"></a>
             <a class="icon-social-facebook" aria-label="Esri on Facebook" href="https://www.facebook.com/esrigis/"></a>
@@ -157,7 +157,7 @@
           </section>
         </nav>
         <div class="column-24 leader-1">
-          <p><small><a href="http://www.esri.com/legal/copyright-trademarks">Copyright © 2020 Esri</a>. All rights reserved. | <a href="http://www.esri.com/legal/privacy">Privacy</a> | <a href="https://developers.arcgis.com/terms/faq/">Terms of use</a> | <a href="https://github.com/Esri/esri.github.io/issues/new">Feedback</a></small></p>
+          <p><small><a href="https://www.esri.com/legal/copyright-trademarks">Copyright © 2020 Esri</a>. All rights reserved. | <a href="https://www.esri.com/legal/privacy">Privacy</a> | <a href="https://developers.arcgis.com/terms/faq/">Terms of use</a> | <a href="https://github.com/Esri/esri.github.io/issues/new">Feedback</a></small></p>
         </div>
       </div>
     </footer>
